log

Thu 14 Mar 2024 02:53:19 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
857e251
Thu 14 Mar 2024 02:57:27 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
07e5c54
Thu 14 Mar 2024 03:00:42 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cbd3941
Thu 14 Mar 2024 03:01:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:21: error: expected expression before ‘<’ token
   30 |   for(int i = 0; i =< size/2; i++)
      |                     ^
Compilation failed
6dcb9c2
Thu 14 Mar 2024 03:02:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c519b3a
Thu 14 Mar 2024 03:04:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cc5d17a
Thu 14 Mar 2024 03:05:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
9edcff4
Thu 14 Mar 2024 03:05:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
b6c46d1
Thu 14 Mar 2024 03:06:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
defa540
Thu 14 Mar 2024 03:09:41 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
c39ab69
Sat 16 Mar 2024 04:23:54 PM UTC: 
 exercises.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:102:37: error: expected identifier or ‘(’ before ‘}’ token
  102 |                                     }
      |                                     ^
Compilation failed
260fe0b
Sat 16 Mar 2024 04:24:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
e9107b7
Sat 16 Mar 2024 04:27:28 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:71:8: error: unused variable ‘nuevoArr’ [-Werror=unused-variable]
   71 |   int* nuevoArr = (int *)malloc(talla * sizeof(int));
      |        ^~~~~~~~
exercises.c: At top level:
exercises.c:102:37: error: expected identifier or ‘(’ before ‘}’ token
  102 |                                     }
      |                                     ^
cc1: all warnings being treated as errors
Compilation failed
2522e70
Sat 16 Mar 2024 04:28:34 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:1:
exercises.c:99:37: error: expected identifier or ‘(’ before ‘}’ token
   99 |                                     }
      |                                     ^
Compilation failed
e3fa773
Sat 16 Mar 2024 04:28:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
a139c08
Sat 16 Mar 2024 04:38:28 PM UTC: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:115:35: error: expected statement before ‘)’ token
  115 |       else if(arr[i] > arr[i + 1]))
      |                                   ^
exercises.c:120:34: error: expected statement before ‘)’ token
  120 |   else if(desendente == size - 1))
      |                                  ^
exercises.c:122:3: error: ‘else’ without a previous ‘if’
  122 |   else
      |   ^~~~
Compilation failed
aa794b2
Sat 16 Mar 2024 04:40:49 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:113:35: error: expected statement before ‘)’ token
  113 |       else if(arr[i] > arr[i + 1]))
      |                                   ^
exercises.c:118:34: error: expected statement before ‘)’ token
  118 |   else if(desendente == size - 1))
      |                                  ^
exercises.c:120:3: error: ‘else’ without a previous ‘if’
  120 |   else
      |   ^~~~
Compilation failed
215393e
Sat 16 Mar 2024 04:40:57 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
05f9356
Sat 16 Mar 2024 04:42:08 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
ad0353d
Sat 16 Mar 2024 04:43:56 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:118:29: error: expected ‘)’ before numeric constant
  118 |   else if(desendente == size  1)
      |          ~                  ^ ~
      |                             )
Compilation failed
1a5bcbc
Sat 16 Mar 2024 04:44:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
478a85d
Sat 16 Mar 2024 04:45:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
825dfe9
Sat 16 Mar 2024 04:46:47 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:111:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  111 |       if(arr[i] < arr[i + 1])
      |       ^~
exercises.c:113:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  113 |         printf("%d", ascendente);
      |         ^~~~~~
exercises.c:114:7: error: ‘else’ without a previous ‘if’
  114 |       else if(arr[i] > arr[i + 1])
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
cf7bbd4
Sat 16 Mar 2024 04:47:16 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
73f6e1d
Sat 16 Mar 2024 04:48:03 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|3
total_score: 40/70
20f2341
